fix overflow on success page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -225,6 +225,7 @@ a {
         animation-name: store-fade-in;
         padding: 30px;
         margin: auto;
+        overflow-y: scroll;
     }
 }
 
